# spooky

./: Cargo.toml  LICENSE
src/: common.rs  config_file.rs  identifiers.rs  lib.rs  lock.rs  main.rs  rsync.rs  ssh.rs
tests/: find_config_file.rs
tests/find_config_file/: .spooky
